# today-safety-docs

./: .gitignore  README.md  proposal.md  pyproject.toml  technical_architecture.md  user_scenarios.md
data_sources/: README.md  manifest.json
data_sources/catalog/: 15002150_fileData.json  15057210_openapi.json  15084084_openapi.json  15104692_fileData.json  15119137_openapi.json  15121001_openapi.json  15121008_openapi.json  15121557_fileData.json  15128213_openapi.json  15139182_openapi.json  15139398_openapi.json  15139497_openapi.json  15140383_fileData.json  15144147_openapi.json  15144645_openapi.json  3082968_fileData.json
data_sources/notes/: api_reference.md
data_sources/reports/: data_quality_report.md  schema_summary.md
data_sources/review/: README.md  accident_taxonomy_review.csv  priority_review_guide.md  process_taxonomy_review.csv  taxonomy_review_workbook.xlsx  taxonomy_review_workbook_minimal.xlsx
docs/: implementation_feasibility_review.md  next_turn_rag_handoff.md  proposal.md  rag_corpus_design.md  rag_ingestion_todo.md  technical_architecture.md
frontend/: README.md  api_and_data_contract.md  component_and_state_spec.md  user_flow_and_wireframes.md
scripts/: build_taxonomy_review_workbook.mjs  export_taxonomy_review_candidates.py  preprocess_today_safety.py
